# data-access-lib

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/stock_data_access/: __init__.py  calendar.py  financial.py  index.py  loader.py  mongo_context.py  pipeline_catalog.py  prices.py  score.py  user.py
src/stock_data_access.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stock_data_access/catalogs/: data_pipelines_catalog.yaml
src/stock_data_access/indicators/: __init__.py  nineturn.py  volatility.py
tests/: test_prices.py
