[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-data-access"
version = "0.1.0"
description = "Reusable stock price data access layer for Mongo-backed OHLCV/minute bars"
authors = [{ name = "blueenergy" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=2.0",
  "pymongo>=4.0",
]

[project.urls]
Homepage = "https://example.org/stock-data-access"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]